[package]
name = "chiritori"
version = "0.3.0"
description = "A tool for finding and removing time-limited source code"
repository = "https://github.com/piyoppi/chiritori"
license = "MIT"
authors = ["piyoppi"]
edition = "2021"

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
atty = "0.2"
