[package]
name = "chiritori"
version = "1.1.0"
description = "A tool for removing time-limited source code"
repository = "https://github.com/piyoppi/chiritori"
license = "MIT"
authors = ["piyoppi"]
edition = "2021"

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
atty = "0.2"

[dev-dependencies]
rstest = "0.23.0"
