[package]
name = "chiritori-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
chiritori = {path = "../chiritori"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tsify = "=0.4.4"
chrono = "0.4.34"
