[package]
name = "chiritori"
version = "1.3.0"
description = "A tool for removing time-limited source code"
repository = "https://github.com/piyoppi/chiritori"
license = "MIT"
authors = ["piyoppi"]
edition = "2021"

[package.metadata.release]
release = false

[dependencies]
chrono = "0.4.34"

[dev-dependencies]
rstest = "0.23.0"
