[package]
name = "chiritori"
version = "1.4.1"
description = "A tool for removing time-limited source code"
repository = "https://github.com/piyoppi/chiritori"
license = "MIT"
authors = ["piyoppi"]
edition = "2021"

[package.metadata.release]
release = false

[dependencies]
chrono = "0.4.34"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2"

[dev-dependencies]
rstest = "0.23.0"
